Prevent username from overlapping in mobile menu (#22074).
Patch by Felix Gliesche.

git-svn-id: http://svn.redmine.org/redmine/trunk@15210 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/responsive.css
+++ b/public/stylesheets/responsive.css
@@ -511,6 +511,10 @@
 
   .flyout-menu__avatar .user {
     padding-left: 15px;
+    padding-right: 15px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   /* user link when no avatar is present */
